@@ -5,13 +5,15 @@ AUX xdvik-22.85-mksedscript.patch 488 SHA256 ae0694414cd7400406597590d373b00baf0
 AUX xdvik-22.85-mksedscript_gentoo.patch 699 SHA256 cf2c538a0793852f4a22f0504ae670eca3d2b13b4aad66f0a2f13f5896a2164c SHA512 eb171a9e145d1794bbf999a7935de340c5744c406360178382b5b8a9466763691b97ffa2ebf3aa72ef5d0fb271f5805e4822e707d669fc8f00ed8b9f428765ad WHIRLPOOL 775610a38a2fbfd2548511b9255aa1294df8ac2aaebe894d8a7b202dd51f7b5fc1b39fb80cf36f1e52ad7cb5fb316cad4b198f5f2133a0251b64ae4b193ccd08
 AUX xdvik.xpm 3125 SHA256 3f9dd32d1197dcbb5a414816eea45c2f4dced24ee7726ee196b8d8d2e2e44d26 SHA512 697c888c481d7cbe7b42980d2ae93a8d25d781f926970d9040f8fbc6a37545349fbdbe2e8c98fb686e5a5ebe9a7a5ff661793d3a264fd8641182b0397365517d WHIRLPOOL 5b19e53e59a03f8cd789d139b78fa54e85c26fe6ffc281bf02bea4ba2cec3a2a6f9466a766dcd5086c98557755a4203422f28dd03ceeff6a3c7a7cd3a0c5a115
 DIST xdvik-22.85.tar.gz 4128828 SHA256 91f08103e53ab46efc83053e648bdd07aa100043233dadcb7384efc83fa2dde8 SHA512 9220bac0dea21d617b4ea7129ca8133fd447fb1adc26c699970cae7d3e168e32f4745b0936d18d8f769f3926c526e085f0c92a4d99d5faff8301e3c4ebc297b5 WHIRLPOOL 57ffc2d6a326b754b63aed54836c05b2e9431b01faba6d9bdc347b07094a62a7569d7746f556366b282808cc93a41a81cbda4fd82cdf4972133f8addc74e4e75
+DIST xdvik-22.86.tar.gz 4412419 SHA256 a3dffb8d878e6039ebc168d3bd82d194912dac53177673f818d0baac2dc27203 SHA512 f2cf15b8f94ae1a43b749fc9355eac1b427a41d690299ad4a221d51ef21eb0adcf6986c13f03d8c681e6cc2522229a2843b5c6f1ad359c5f0a28933e6d11c8eb WHIRLPOOL 8031f1ddc0eb8de415446752c07c0b7a22f35ffcd6f44a2b025cdb1bf1593bbe37306da5c93d620fe9f00b14fd6fc061c0f432afd7294ccf774e5e4e4fbd8f9d
 EBUILD xdvik-22.85-r1.ebuild 3054 SHA256 433649f0817448b04d26f9e38519f7caaab88ec242c75be39e0d87aa8a5c8150 SHA512 4743e9ab1815b8da29dd8a080bc361a91f272ad6027ebf8838828041d5aea1f9085ecd8f3ac7b40843a21eb32d09a7b27475af19df9bec9d517449bd6865d78d WHIRLPOOL a6cd027f7c191d668bb7a65cfe126c604e311f8ff92c3215b3aead434c81f7a242827ad2ae3b5050676a47abf539583ed7eb2fd533c08294704fe92980413e09
-MISC ChangeLog 14206 SHA256 1f59683451b321ca9e10df09c7b37c3e0725962af6a4c106cd1718ea441ec308 SHA512 07508bd44c68a9998c6154218d62410c18fb2bfa81cbe2c4338bae46a4abf3250142825659c6fdad28aa317db24f36be43d5b698c28963c3b94cb801108de460 WHIRLPOOL 272ef38d7d4f8dd5ab6b6f436febc9993a41f9babb32dd86c5b16ebed7cf39ab48372cd48a0ce89528b6844ef43f493a20e52686c319a9881c3f91fa605f0db1
+EBUILD xdvik-22.86.ebuild 2617 SHA256 26fe046b7b61a183c695f0ca71cf8c30ba0450b3566ba10e4f505624135a7641 SHA512 ba91c00319a2beaf12015e0e05e92d625d1c527e16e470a280fa01eb92f1567e164ea1de7cf046650325f8641e7c15baccfee5536aaee2a4e8a844811dd54229 WHIRLPOOL f6a2ba8681fa3851e5356d5665af10faa382b358ff4acbf279c531fcf7ca31dd75bfb17e0d17ddcd70ceeaf279d539a00c4959fd695329b5aea0d37cf1e9d6c3
+MISC ChangeLog 14323 SHA256 34303d1e52b2a1fd8cbfb444c4ba4dc8244460e571b4f2afeea453039c2185fe SHA512 0689006e811a8eb4640ceec7353f169af243563a85defc302159ab24f282f12f1efb25630b26b46af98a8c7baed934c12a30faf6573be758bb7b8721eea79964 WHIRLPOOL a8671e59cd31e1cb9d6ba75800177cc591b98caf80d469501e9582209f1d8e0f3044795438e0b5b595de1af9955d7b35fd5a8c847a795267b59e8df3b144c0e1
 MISC metadata.xml 351 SHA256 1348cd17584c52004c3d87ad5f2af2a6f87d921ffdeb1675827d8cb978ebad55 SHA512 a2c0f80de3808593eb253bc5acd062e0251fd5e4089d97afc7955d9e8fa87b864828e867d4bd0905fcef492950e562484807465cf24975fc833dda7bbd73169b WHIRLPOOL d79bb4da78aa80d12a2827fc64e0f25d3e85a3196ccf6ac9ff8c979e263f2e993297dba0c937af2e65a29de7b17de71a0a6f666c8ead54afb49160a417a9abb7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlGWvv0ACgkQvFcC4BYPU0oQ6QCfdLGS4UetTk4GSj6kEjesZP5c
-mDIAoJcninZR8N2kKenrrHpcHtP8zbbq
-=NEEL
+iEYEAREIAAYFAlGWyJ4ACgkQvFcC4BYPU0pbgACcCnhLkMngCp9OS+p8nAqmUWRJ
+EXoAoLyMyhrUDVPvTd1HzFbb7xkFFYRb
+=2eXL
 -----END PGP SIGNATURE-----
