@@ -5,18 +5,20 @@ AUX postinstall-en-0.6.txt 2218 SHA256 f40b5134e13206e0abc325ec28bc0d42d8f233efc
 AUX postupgrade-en-0.6.txt 1271 SHA256 110724101fb7f712fec3e44023d1562de235dee4578acd5be5846bdf2e510c18 SHA512 424b4df770080cc2e245804f59320c1df1802d1daf6e21c778d8f78e16a19233a01e8ea81f69accf97b56134dc0ada3d128daa931fb83e11886b081794908223 WHIRLPOOL e2f31106ce49daa4bb2f90c7a4d7867447ec279160d99177de58a3e2f7362821a049c1ee8202188f231544654e7c28fd5bdb7a5bf9d7597700e9fc4a78248a9a
 DIST roundcubemail-0.8.6.tar.gz 3724565 SHA256 88128db0dc57651e08beb3c4811bc9e33aca1c39a50cfc9efb5d14b0baa17704 SHA512 b49956ab923bee773aeaa140c24c6ca012a6fae05bb2cb664e874f4bb14436d9aaedee6c2d82638f1a1db6ab58dfd8cc3b9d0144d256d07f662565c4fa287d63 WHIRLPOOL 365ac75966df392554a138e150a9c1d93f982aa7f742682147bb14d2987f110b8b8d416e0241bf3bb3221aeb8c0aa587ab6372896f7484e78df37d5d4c40f47e
 DIST roundcubemail-0.9.0.tar.gz 3711615 SHA256 7edab9579cd2a6353c30de3fcfc86da231f0a46f7ad4ce707090813173f662c2 SHA512 33a2026027e20f3ed8915806e0d8dcfd1f14143761b22c9bf452e7520c0b15304e74d34c524a3811a7c85e8f69bdfe40f44f0a92ff8993c94c68dfe56585da73 WHIRLPOOL 08d01f465304acffd49e4cf247cd84175d7ab4da872e4c8a2988015e948f37f3811a1518841fa1139667e994301afa23428eed2b2f58dec71a625f5de1ca37e1
+DIST roundcubemail-0.9.1.tar.gz 3734373 SHA256 95962f90eebcf17521f66f4057a030b3eabd4a8cb5748f22bf0d4518816b8938 SHA512 1ec3fc475746b89a865786e075366e1de88a959cbd44738b807693b92be9a615cee6ce81e35e713d486ef9aa1f0618dc231674ba7dc911551cc807005083b0be WHIRLPOOL 96386c18c9af366dc4ae35dbb4152c4d056b50af3003c70bb418fd5ea19134bdd336696d6e3746839789e71bf88c6be685e86956c54d6047c5873fd934c9a627
 EBUILD roundcube-0.8.6.ebuild 1942 SHA256 a54e9b733ca6cda469e37cd224f189097cc0a74008a5393962634532a9f87bfe SHA512 22d4737db24d6ff3ffe96ae2aac2230647ac070ff328eae9299685315ca222cecac98699185b7cb61a250e4030e1e5c13e97ad457d50741ddd7b963ba09eef6f WHIRLPOOL c0cd732ba72d9f831068f3de41798e979298685fbe37a51b199af9aab350fdf4d1e499a7e64fd0f8d4635e293ca7aac8e7a84d19385540c9dac38357523d3726
 EBUILD roundcube-0.9.0.ebuild 1866 SHA256 f6f6265aae49e7ffe64c85835a56f852c076ed68888efb8019ac1cc7643f2a47 SHA512 e2996dcd198d47d3518e62ddce27a22e7daefda1487b3669519d559e8364658ad4a2a1cf8bf72b84ed03417de65cb1eda063cba38533f21528a98c63e44e106a WHIRLPOOL 3d04c32534a6702aa87bad382680c280dcbcd1bf4b2f38f42e8fcddbd865767457f392edf21ebeda8edb0ae060061726af9097d0f090e1e0c6f5bf6938c6e4f9
-MISC ChangeLog 15462 SHA256 fffc7396d06e5e656da5e48c6d1ee605cdfcff6b8d8d5bf9c714f49f0e168a7c SHA512 748a6b5ebe80e21470cf2bff43cfcc1df4332c0c85c3035925fec17852d673c59b338e328890e61b0f2777ed5620c8d4e2f33a68235792c99bbbe097fa64974f WHIRLPOOL d0116880c19c9a423c00840a3a2176fc2c67f768b3b55db52c6693e60d3936275c07f4edfd0a4604e32e8691382abe675727680bb5377a456d0a1fccc9ae8088
+EBUILD roundcube-0.9.1.ebuild 1866 SHA256 3956e26a0f2fbb993bda56a01dc24226d9cb3f4b3030722efabc0a81a587cb1f SHA512 901768a639433be4159eb7320cb98be43101306e77e8bd4339d81e3f09e57f0f08b572a8bef0822554d27b0de8f03cd03f3724f60deb7d09ed529ae0fff1d379 WHIRLPOOL cccf85ef3181e5b521ee07f8c79618a55bd6d564d8051312f324675f53df3bffedcd64062676067a324c592223ce67a1fc85e66d0a06c6bebd09b453091356bf
+MISC ChangeLog 15585 SHA256 26c4278a0e0a55cd44af1b5b5c68978a907281af9e918d99b6097b56970877d6 SHA512 39ca1d9b3cb863c498689eac501c2df0c757281d56f8d24d7199133f6cdbac5afe060d2a3e62b31b703cbc2409830663ed65c94cff9684e1637442e00401e7ee WHIRLPOOL 9bb771bb843793560f11e0d7bf28c5354c99f16f21e9f563e7c35092383fb889472ecae39303247b0aaf99ebf67d55aa0cd0dc5b51bd377c2a2d1f0bfb41f6d3
 MISC metadata.xml 161 SHA256 9cd891fcf0af580e98b62d2f4ded9e53671599f5a7aafd5dce692b996d2a83f4 SHA512 da8733f12ac4bebcfa485138fd9880683c1196efc0312a588ffce412ed14c1dd831e005129b6598d027af44d381fceb844453a433d0c982348e21f2d9c49f52e WHIRLPOOL 2b56ebef4f0870596c32c35c96e6dfbc911f6a3d8fe0e8c463df76dfa73dde112948c814b9a9ee996b7d71a85e4a723033ee3b92f4cde0f31d0770404d7dba61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRb31QAAoJEEqz6FtPBkyj17QIAKugUnrg7MnuUbuf4tqZCRAx
-VuFBoHQ91Ac+i4xZAD+YhKOiwhrwBTnkneChvfPar7iXqbytRt/3pvKZJqPsNzQ2
-SSj7g4QUrQK3OJon8K/9wY+Rbaby8xq+Yd/KdUscCjwzVK2bzcCLuBHsZIOKO4ZV
-0G4sLAIEulceoebG/wdtqpWLaahaFHdWT0vOT/8891CVyDDWNzw+l8zulv7nx5hZ
-3rLMmIWeUNip3z8QXEERN4ZZob0OFJ4vQKcOCfDmgkBnnxn1Yauc6JW4aCG3GX/a
-VHSNmllCyRvssWo7/kkuzsmiwSk603AJC1LQg1b4klDnDGP41TUbwbvcbqPAwwI=
-=Em3M
+iQEcBAEBCAAGBQJRluDCAAoJEEqz6FtPBkyjeT0H/3UsiTXKEGNAYmDe5eQU+MVS
+5jaceDgdZggelwyX3ePZglvKsQVuRvvv6gN0osXvNNJMh8lfZsnwBzxFPptBOe8S
+tmZT3AMVwrWDrh+/B6GMrM6swWyohETfymUmm03Qv/1NPLNs33ghK4lKqnU9C0UU
+JdSGBc+s9yq9WABHrKqyX22lpZwhIhXIIrCs+qiAtELWKe/OFCJbtV73N7+ZHgpa
+R/yn0aqgNO+S/JDJxd4VuAv0WgFZsGnQuWQiaILnr9m2/pLRzQxDYFyymvaebXRs
+1KNCsLNbNssFD1PRudSp4dJng5yNSovVklBXWPybcYfpeSvoqB8SbO5ZlUEWG5k=
+=/CwV
 -----END PGP SIGNATURE-----
