@@ -1,0 +1,13 @@
+DEFINED_PHASES=install postinst prepare prerm setup
+DEPEND=|| ( virtual/httpd-cgi virtual/httpd-fastcgi ) >=app-admin/webapp-config-1.50.15
+DESCRIPTION=A browser-based multilingual IMAP client with an application-like user interface
+EAPI=5
+HOMEPAGE=http://roundcube.net
+IUSE=ldap +mysql postgres sqlite ssl spell vhosts
+KEYWORDS=~amd64 ~arm ~hppa ~ppc ~ppc64 ~sparc ~x86
+LICENSE=GPL-3 BSD PHP-2.02 PHP-3 MIT public-domain
+RDEPEND=virtual/httpd-php >=dev-lang/php-5.3[crypt,gd,iconv,json,ldap?,pdo,postgres?,session,sockets,ssl?,xml,unicode] mysql? ( || ( dev-lang/php[mysql] dev-lang/php[mysqli] ) ) spell? ( dev-lang/php[curl,spell] ) sqlite? ( || ( dev-lang/php[sqlite] dev-lang/php[sqlite3] ) ) >=dev-php/PEAR-Mail_Mime-1.8.1 >=dev-php/PEAR-Net_SMTP-1.4.2 >=dev-php/PEAR-Net_IDNA2-0.1.1 >=dev-php/PEAR-Auth_SASL-1.0.3 >=app-admin/webapp-config-1.50.15
+SLOT=0.9.1
+SRC_URI=mirror://sourceforge/roundcubemail/roundcubemail-0.9.1.tar.gz
+_eclasses_=webapp	25b9b1696f5e698711f47d45c3d45e3e
+_md5_=3bdb4881670929e06b7ac88a81e30c39
