@@ -1,6 +1,11 @@
 # ChangeLog for app-text/xdvik
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/xdvik/ChangeLog,v 1.104 2013/05/17 23:36:28 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/xdvik/ChangeLog,v 1.105 2013/05/18 00:17:33 aballier Exp $
+
+*xdvik-22.86 (18 May 2013)
+
+  18 May 2013; Alexis Ballier <aballier@gentoo.org> +xdvik-22.86.ebuild:
+  version bump
 
   17 May 2013; Alexis Ballier <aballier@gentoo.org> -xdvik-22.84.16.ebuild,
   -files/xdvik-22.84.16-cvararg.patch,
